--- a/prueba/prueba/Views/web.config
+++ b/prueba/prueba/Views/web.config
@@ -16,7 +16,7 @@
         <add namespace="System.Web.Mvc.Ajax" />
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
-        <add namespace="lab13" />
+        <add namespace="prueba" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
