--- a/prueba/prueba/prueba.csproj
+++ b/prueba/prueba/prueba.csproj
@@ -8,12 +8,12 @@
     <ProductVersion>
     </ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{F0039F40-845C-44B8-89F3-CFF38D07AEC4}</ProjectGuid>
+    <ProjectGuid>{AA5119A5-F24B-4C10-AE98-DCA73864BC4B}</ProjectGuid>
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>lab13</RootNamespace>
-    <AssemblyName>lab13</AssemblyName>
+    <RootNamespace>prueba</RootNamespace>
+    <AssemblyName>prueba</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
     <Use64BitIISExpress />
@@ -127,9 +127,9 @@
         <WebProjectProperties>
           <UseIIS>True</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>51859</DevelopmentServerPort>
+          <DevelopmentServerPort>49644</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:51859/</IISUrl>
+          <IISUrl>http://localhost:49644/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
